new page, change words

--- a/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
+++ b/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
@@ -265,7 +265,7 @@ data-ad-slot="5275186684">
   <br>Prudential tính bảo tức mỗi năm dựa trên số tiền bảo hiểm, mà trong những năm đầu tiên thì tổng số tiền khách hàng đóng vào còn nhỏ hơn số tiền bảo hiểm nhiều nên số bảo tức đó không có thật ở những năm đầu, chỉ có thể nhận được ở tương lai khi hợp đồng đáo hạn.<br>
 Sự khác nhau giữa hai cách tính trên sẽ thấy rõ ở bảng minh hoạ quyền lợi bảo hiểm: bảng minh hoạ quyền lợi bảo hiểm của Manulife cho thấy bảo tức thấp trong những năm đầu nhưng tăng rất nhanh do lãi suất cao, bảng minh hoạ quyền lợi bảo hiểm của Prudential cho thấy bảo tức cao ngay trong năm đầu nhưng tăng rất chậm do lãi suất thấp.<br>
 Khách hàng của Manulife được quyền lấy bảo tức bất kỳ khi nào, hoặc dùng bảo tức để tự động trả phí sắp đóng, việc khách hàng rút bảo tức không ảnh hưởng đến bảo tức sắp được chia, chỉ ảnh hưởng đến tiền lãi của bảo tức tích luỹ.<br>
-Khách hàng của Prudential cũng được nhận bảo tức trước khi hợp đồng đáo hạn nhưng chỉ nhận được một phần từ con số như thông báo hàng năm từ Prudential và bảo tức các năm sau sẽ ít hơn con số trong bảng minh hoạ.<br>
+Khách hàng của Prudential cũng được nhận bảo tức trước khi hợp đồng đáo hạn nhưng chỉ nhận được một phần từ của số trong thông báo hàng năm từ Prudential và bảo tức các năm sau sẽ ít hơn số trong bảng minh hoạ.<br>
 Cách Manulife tính bảo tức minh bạch và dễ hiểu hơn cách Prudential.</p>
 
 <!-- AMP display ads -->
