--- a/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html
+++ b/huu-ich/cau-chuyen/mua-nha-hay-dau-tu.html
@@ -246,14 +246,14 @@ data-ad-slot="5275186684">
 </amp-ad>
 
   <h2>Logic cá nhân thích đầu tư hơn</h2>
-  <p>Tất nhiên tính như trên là đơn giản hoá quá mức. Có những yếu tố như là người tìm mua nhà năm 1940 chưa chắc có ngay 30.600 USD để đưa vào cổ phiếu và mặt khác cũng cần chỗ để ở. Nhưng ít ra thì con số trên cho thấy sức mạnh của lãi kép, một trong những điều kỳ diệu trên đời.
+  <p>Tất nhiên tính như trên là đơn giản hoá quá mức. Có những yếu tố như là người tìm mua nhà năm 1940 chưa chắc có ngay 30.600 USD để đưa vào cổ phiếu và mặt khác cũng cần chỗ để ở. Nhưng ít ra thì kết-quả trên cho thấy sức mạnh của lãi kép, một trong những điều kỳ diệu trên đời.
   <br>Nhưng có những lý do khác khiến tôi nghĩ rằng nên đầu tư vào cổ phiếu và trái phiếu hơn là mua nhà.</p>
   <ul>
     <li><b>Tiền sửa và nâng cấp nhà</b>
     <br>Dường như có ít người nghĩ đến tiền sửa và nâng cấp nhà khi mua nhà. Bạn không chỉ phải giữ cho căn nhà trông tốt mà còn phải nâng cấp, sẽ tốn nhiều tiền cho những thứ như là hệ thống điều hoà nhiệt độ, thay mái, thay đồ dùng trong nhà khi nó hư.
     <br>Khi bạn đi thuê nhà, bạn không chịu trách nhiệm về những thứ trên. Hơn nữa, khi cần phải sửa thì đã có chủ nhà trả tiền nên không ảnh hưởng đến ngân sách của bạn.</li>
     <li><b>Chi phí khi mua nhà và bán nhà</b>
-    <br>Theo con số gần đây của Cơ quan Điều tra dân số Hoa Kỳ, trung bình một người Mỹ dời nhà 11,7 lần trong đời. Và từ 18 tuổi trở đi, một người dời nhà 9,1 lần. Những lần dời nhà đó có thể là dời từ nhà thuê này sang nhà thuê khác, cũng có thể là mua nhà này bán nhà kia.<br />
+    <br>Theo kết-quả gần đây của Cơ quan Điều tra dân số Hoa Kỳ, trung bình một người Mỹ dời nhà 11,7 lần trong đời. Và từ 18 tuổi trở đi, một người dời nhà 9,1 lần. Những lần dời nhà đó có thể là dời từ nhà thuê này sang nhà thuê khác, cũng có thể là mua nhà này bán nhà kia.<br />
 Chi phí dời nhà thì như nhau dù cho dời từ nhà thuê hay dời từ nhà bán. Nhưng bán nhà thì có những chi phí khác, bên môi giới bán nhà có thể đòi 3% tới 7% giá căn nhà (ở Việt Nam thì 0,5% tới 1%), bạn còn có thể tốn thêm phí khi vay tiền mua căn nhà mới, có khi bạn còn phải trả phí sang tên khi bán nhà, tuỳ theo thoả thuận. Còn khi đi thuê nhà mới, bạn chỉ tốn tiền đặt cọc (lấy lại được).</li>
     <li><b>Mua bán không đúng lúc</b>
     <br>Bạn có quen ai mua nhà trong các năm 2006-2007 và bán trước năm 2012 (thời điểm biến động thị trường bất động sản Mỹ, cũng hơi giống ở Việt Nam)! Dường như ai cũng có người quen bị lỗ vì mua nhà giá cao và bán giá thấp. Nếu bạn cũng trong số đó thì bạn thấy bất động sản không phải là một nơi tốt để đưa những đồng tiền kiếm được một cách cực khổ vào.
@@ -299,7 +299,7 @@ Nhiều người vẫn nghĩ rằng giá cái nhà sẽ tăng. Tôi tin là giá
   <br>Tóm lại, hãy chờ đến khi giá nhà rẻ hơn nữa rồi hãy mua.</p>
   <p>Có thể dùng hàm FV trong spreadsheet để so sánh giữa hai phương án: thuê nhà hay mua nhà chung cư để ở. Trong hình này, nếu giá nhà chung cư tăng gấp ba sau 15 năm thì mua nhà để ở có lợi hơn. Nhưng như đã viết ở trên, nhà chung cư càng để lâu càng mất giá.</p>
   <div><amp-img alt="Thuê nhà hay mua nhà" src="/images/mua-nha.jpg" height="537" width="637" layout="responsive"></amp-img></div>
-  <p>Các bạn có thể dùng <a href="https://docs.google.com/spreadsheets/d/1GuzxytGto4BdpjUJc_YWI5M8u7PeLhYpmPoer_1Gli4/edit?usp=sharing" target='_blank'>file ở đây</a> để tự tính với các con số của riêng bạn.</p>
+  <p>Các bạn có thể dùng <a href="https://docs.google.com/spreadsheets/d/1GuzxytGto4BdpjUJc_YWI5M8u7PeLhYpmPoer_1Gli4/edit?usp=sharing" target='_blank'>file ở đây</a> để tự tính với các số của riêng bạn.</p>
 
   <div class="todiscuss">
   Các bài liên quan:
