--- a/huu-ich/cau-chuyen/tranh-mang-no.html
+++ b/huu-ich/cau-chuyen/tranh-mang-no.html
@@ -4,7 +4,6 @@
 <title>Phải tránh những khoản nợ dù lớn hay nhỏ</title>
 <meta name="description" content="Tránh mang nợ để đầu óc thanh thản, cuộc sống ổn định. Phải cẩn thận khi dùng thẻ tín dụng." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, nợ">
-<link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cau-chuyen/tranh-mang-no">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/cau-chuyen/tranh-mang-no">
 
 <!-- in head of html file -->
@@ -255,7 +254,7 @@ Tôi dịch lại dưới đây.</p>
   <br>Tôi cũng vậy. Tất cả chúng ta đều vậy. Mọi thứ: xe hơi, quần áo mới, kim cương, những chuyến du lịch; hầu như tất cả những thứ mà bạn để mắt đến đều có thể trở thành của bạn.
 Phải, một cách nào đó thì như vậy…
   <br>Nếu bạn muốn trả nợ hàng tháng dài dài đến năm năm, mười năm, hay hai mươi năm thì nó trở thành của bạn. Nghe có vẻ hấp dẫn không? Có lẽ không.
-  <br>Nhưng đó lại là cách mà chúng ta làm. Trong quý tư năm 2013, nợ của các cá nhân toàn nước Mỹ tăng lên đến con số khổng lồ 11520 tỉ đô-la Mỹ. Tất nhiên là một phần trong số đó là nợ vay mua nhà, vay để học đại học, hay là vay để mở doanh nghiệp. Một phần nào đó cũng do thất nghiệp, viện phí, những trường hợp khẩn cấp. Nhưng phần còn lại là vay để làm gì? Tôi đoán rằng để mua thuyền, iPad, và giày thời trang. Và đồ nội thất, đi nhà hàng nữa. Bạn có thể đoán thêm gì nữa không?</p>
+  <br>Nhưng đó lại là cách mà chúng ta làm. Trong quý tư năm 2013, nợ của các cá nhân toàn nước Mỹ tăng lên đến số khổng lồ 11520 tỉ đô-la Mỹ. Tất nhiên là một phần trong số đó là nợ vay mua nhà, vay để học đại học, hay là vay để mở doanh nghiệp. Một phần nào đó cũng do thất nghiệp, viện phí, những trường hợp khẩn cấp. Nhưng phần còn lại là vay để làm gì? Tôi đoán rằng để mua thuyền, iPad, và giày thời trang. Và đồ nội thất, đi nhà hàng nữa. Bạn có thể đoán thêm gì nữa không?</p>
   <h2>Hãy ngừng vòng luẩn quẩn</h2>
   <p>Tất cả chúng ta đều biết đổi xe hơi dễ đến mức nào. Bạn chỉ cần đến một đại lý xe, họ xem xe của bạn, bạn chọn một chiếc đẹp hơn, thế là xong. Bạn sẽ tiếp tục trả góp cho chiếc xe mới với mức bằng như trả góp cho chiếc xe cũ, thậm chí còn ít hơn nữa. Nhưng có phải bạn đã được lợi khi đổi xe mà không có tiền mặt? Có lẽ không.
   <br>Tôi cũng đã làm như vậy. Gia đình tôi đã đổi xe không biết bao nhiêu lần mà kể, hầu như chỉ vì ý thích. Bây giờ nghĩ lại, tôi cho rằng chỉ vì chán chiếc xe cũ nên đổi nó. Và thật đáng buồn là chúng tôi đã không nhận ra cái giá thật sự của việc cứ đổi xe liền liền. Chúng tôi chỉ quan tâm đến khoản phải trả góp hàng tháng, không có mục tiêu trả dứt ngay.
@@ -278,7 +277,7 @@ Phải, một cách nào đó thì như vậy…
   <h2>Trả hết tiền mua hàng để cảm thấy nóng rát</h2>
   <p>Từ lúc đó, chúng tôi trả hết tiền khi mua mọi thứ, kể cả chiếc xe cho chồng tôi, đồ nội thất, sửa nhà… Mặc dù rất khó làm, việc ngừng mua trả góp mọi thứ đã thay đổi tương lai tài chính của chúng tôi. Đây là những lý do:</p>
   <ul>
-    <li><u>Trả hết tiền buộc chúng ta phải cân nhắc giá tiền</u>. Dù cho bạn mua món gì, bạn đều cảm thấy khác nếu trả hết tiền. Vì bạn phải nhìn vào tổng số tiền chứ không phải là con số phải trả góp hàng tháng hay hàng năm.</li>
+    <li><u>Trả hết tiền buộc chúng ta phải cân nhắc giá tiền</u>. Dù cho bạn mua món gì, bạn đều cảm thấy khác nếu trả hết tiền. Vì bạn phải nhìn vào tổng số tiền chứ không phải là số phải trả góp hàng tháng hay hàng năm.</li>
     <li><u>Trả hết tiền làm cho chúng ta bớt chi tiêu</u>. Khi bạn buộc mình phải trả hết tiền, những thứ đắt tiền sẽ bớt lung linh, hấp dẫn hơn. Thử cầm 15000-20000 đô-la bước vào đại lý xe với ý định mua một chiếc xe mới, tự nhiên bạn sẽ cảm thấy giữ lại chiếc xe cũ thì hay hơn. Đúng không?</li>
     <li><u>Trả hết tiền giúp chúng ta tránh nợ</u>. Điều tốt nhất khi không mua trả góp là nó giúp bạn không bị nợ. Tất cả chúng ta đều biết rất dễ trượt xuống cái dốc nợ nần đó. Có rất nhiều lợi ích của việc không nợ, như là: tiết kiệm được tiền, ít căng thẳng hơn, và cảm giác không nợ nần ai hết. Đó là cảm giác tự do.</li>
   </ul>
