--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -4,7 +4,6 @@
 <title>Sổ tiết kiệm hay Quỹ đầu tư tốt hơn?</title>
 <meta name="description" content="So sánh tiền lời giữa vàng, USD, sổ tiết kiệm và quỹ đầu tư trong 13 năm qua" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tiết kiệm, đầu tư, lợi nhuận, IRR">
-<link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">
 
 <!-- in head of html file -->
@@ -287,7 +286,7 @@ data-ad-slot="5275186684">
   </ol>
 
   <p>Ngoài ra, khi gửi ngân hàng kiểu đó thì anh A phải giữ từ 14 đến 173 <!-- tiết!B2 -->
- sổ tiết kiệm. Có thời gian tôi cũng làm như vậy (online) và tôi cảm thấy vô cùng lúng túng với hàng loạt con số trên màn hình. Trong khi đó đầu tư vào quỹ đầu tư thì mỗi người chỉ cần biết một vài con số.
+ sổ tiết kiệm. Có thời gian tôi cũng làm như vậy (online) và tôi cảm thấy vô cùng lúng túng với hàng loạt số trên màn hình. Trong khi đó đầu tư vào quỹ đầu tư thì mỗi người chỉ cần biết một vài số.
   <br>Ngân hàng cũng có một loại tiết kiệm mà không tạo ra nhiều sổ, đó là tiết kiệm gửi góp. Tôi khuyên các bạn đừng dùng các loại tiết kiệm gửi góp của các ngân hàng. Mặc dù nó có vẻ giống như các kế hoạch đầu tư ở chỗ góp tiền vào một tài khoản, nhưng các ngân hàng không chuyên quản lý sổ tiết kiệm dài hạn và họ cũng không thích việc đó nên lãi suất dạng đó thấp hơn lãi suất 12 tháng. Tôi đã có một kinh nghiệm không vui với loại tiết kiệm gửi góp đó, sẽ kể lại trong một trang khác.</p>
 
   <p>Một ưu điểm khác của quỹ đầu tư là nó không có kỳ hạn, nghĩa là anh B hoặc anh C muốn rút tiền ra lúc nào cũng được, không bị mất khoản lãi khi chưa đến hạn như gửi tiết kiệm.
@@ -305,7 +304,7 @@ data-ad-slot="5275186684">
 </amp-ad>
 
   <h2>Lợi ích trong tương lai xa</h2>
-  <p>Các con số lãi suất ở trên là lãi kép nên thời gian càng dài thì kết quả càng lớn. Ví dụ với lãi suất như trên, gửi mỗi bốn tuần một triệu đồng sau 30 năm sẽ từ 390 triệu đồng:</p>
+  <p>Các số lãi suất ở trên là lãi kép nên thời gian càng dài thì kết quả càng lớn. Ví dụ với lãi suất như trên, gửi mỗi bốn tuần một triệu đồng sau 30 năm sẽ từ 390 triệu đồng:</p>
   <span class="red">
   <ul>
     <li>được khoảng 1,006 <!-- So!A4 -->
