--- a/huu-ich/de-tien-vao-dau.html
+++ b/huu-ich/de-tien-vao-dau.html
@@ -275,7 +275,7 @@ data-ad-slot="5275186684">
     <li>dễ dàng tối đa hoá lợi nhuận</li>
     <li>có thể rút tiền ra bất kỳ lúc nào (dễ hơn bán cổ phiếu)</li>
   </ul>
-  <p>Tất cả các con số trong bài này được lấy từ các báo cáo của chương trình <a href="/kinh-nghiem/may-tinh/gnucash">gnucash</a> trên số liệu của gia đình tôi.</p>
+  <p>Tất cả các số trong bài này được lấy từ các báo cáo của chương trình <a href="/kinh-nghiem/may-tinh/gnucash">gnucash</a> trên số liệu của gia đình tôi.</p>
   <p>Ngoài bất động sản và cổ phiếu ra còn có những cách khác để ích luỹ dài hạn. Các cách đó được <a href="tich-luy-dai-han">so sánh trong bài viết ở đây</a>.</p>
   <p>Đầu tư vào cổ phiếu và quỹ đầu tư trong nước còn nhắc nhở tôi <a href="/y-kien/dung-hang-viet-nam">dùng hàng Việt Nam</a>. Và tôi cũng biết ơn những người thường xuyên tiêu thụ sản phẩm Vinamilk, Kinh Đô, dùng dịch vụ ngân hàng Eximbank, những người đã đem lại lợi nhuận cho tôi.</p>
 
