--- a/huu-ich/hieu-qua-dau-tu.html
+++ b/huu-ich/hieu-qua-dau-tu.html
@@ -4,7 +4,6 @@
 <title>Tính hiệu-quả của việc đầu-tư</title>
 <meta name="description" content="Khi đầu tư thì cần phải tính hiệu quả của việc đầu tư. Nên so sánh hiệu quả giữa các việc đầu tư khác nhau để chọn việc nào có hiệu quả cao hơn." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, đầu tư, cổ phiếu, bất động sản">
-<link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/hieu-qua-dau-tu">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/hieu-qua-dau-tu">
 
 <!-- in head of html file -->
@@ -232,7 +231,7 @@ data-ad-slot="5275186684">
     <amp-img alt="Investment growth wealth gold coins chart" src="/images/goldcoingrow.jpg" width="400" height="400" layout="responsive"></amp-img>
   </div>
   <p>Trước hết, xin khẳng định rằng <strong>mọi người đều có thể đầu tư và cần phải đầu tư</strong>. Đầu tư không phải là một việc cao siêu dành cho những người tài giỏi. Đầu tư bắt đầu từ những việc đơn giản như được nêu ra trong bài <a href="dung-so-dau-tu">Đừng sợ chữ đầu tư</a>, và có nhiều cách đầu tư ít đơn giản hơn như đã tóm tắt trong bài <a href="cach-dau-tu">Những cách đầu tư</a>.</p>
-  <p>Đầu tư là một cách gia tăng tài sản. Người ta đánh giá hiệu quả của việc đầu tư qua <b>tỷ suất lợi nhuận hàng năm</b> hay là tốc độ gia tăng tài sản. Trong một số việc đầu tư, việc tính tốc độ gia tăng tài sản rất đơn giản, ví dụ gửi tiết kiệm có kỳ hạn thì biết ngay lãi suất. Nhưng có những vụ đầu tư mà người đầu tư đưa tiền vào nhiều lần và nhận lại tiền nhiều lần trong một thời gian khá dài thì tính tốc độ gia tăng tài sản như thế nào? Nếu tính đơn giản bằng cách lấy tổng thu trừ tổng chi thì ta biết lợi nhuận nhưng con số đó không nói lên yếu tố tốc độ.</p>
+  <p>Đầu tư là một cách gia tăng tài sản. Người ta đánh giá hiệu quả của việc đầu tư qua <b>tỷ suất lợi nhuận hàng năm</b> hay là tốc độ gia tăng tài sản. Trong một số việc đầu tư, việc tính tốc độ gia tăng tài sản rất đơn giản, ví dụ gửi tiết kiệm có kỳ hạn thì biết ngay lãi suất. Nhưng có những vụ đầu tư mà người đầu tư đưa tiền vào nhiều lần và nhận lại tiền nhiều lần trong một thời gian khá dài thì tính tốc độ gia tăng tài sản như thế nào? Nếu tính đơn giản bằng cách lấy tổng thu trừ tổng chi thì ta biết lợi nhuận nhưng hiệu-số đó không nói lên yếu tố tốc độ.</p>
   <p>Ví dụ:</p>
   <ol>
     <li>Anh A mua một căn nhà chung cư trả góp hàng tháng đồng thời cho thuê căn nhà đó trong 10 năm rồi bán đi.</li>
