--- a/huu-ich/ke-hoach-tai-chinh/ke-hoach.html
+++ b/huu-ich/ke-hoach-tai-chinh/ke-hoach.html
@@ -229,7 +229,7 @@ data-ad-slot="5275186684">
 <p>Chọn nơi học cho con và dùng trang tính Con-đầu hay Con-út để tính số tiền cần để dành mỗi tháng đến khi con đi học đại học (hai trang này chứa các công thức giống như trang <a href="tk-t-co-dinh">TK-T-cố-định</a>). Ô số tiền hiện có B4 chỉ gồm các khoản tiền tiết kiệm sinh lãi đều đặn. Những tài sản (nhà đất, vàng…) và số tiền bảo hiểm giáo dục mà bạn đang tham gia cho con không ghi ở đây vì sẽ được đưa vào tính trong ô B9. Số tiền bảo hiểm đó chưa có trong tay bạn hôm nay nhưng con bạn chắc chắn có số tiền đó khi bắt đầu học đại học dù cho bạn có bị rủi ro. Để chắc chắn có được số tiền đó, bạn đã chi một khoản vào ô F30/G30 trang Thu-chi.</p>
 <p>Trang tính <a href="tk-t-co-dinh">TK-T-cố-định</a> đã được chép sẵn ra các trang Con-đầu, Con-út, Mua-nhà, mỗi trang cho một khoản chi trong tương lai, ví dụ cho con đầu, cho con út, cho dự định mua nhà. Bạn có thể chép thêm trang cho dự định lập doanh nghiệp riêng. </p>
 <p>Bằng các trang tính <a href="huu-tri">Hưu-trí</a> và Con-đầu, Con-út, Mua-nhà (<a href="tk-t-co-dinh">TK-T-cố-định</a>), bạn đã biết số tiền cần để dành mỗi tháng để thực hiện những kế hoạch cho tương
-lai của gia đình như là cho con học đại học, hưu trí… Các con số
+lai của gia đình như là cho con học đại học, hưu trí… Các số
 tính được từ các trang đó đã được điền vào các ô E47:E49, F47:F49 và H47:H49 của trang Thu-chi, tổng
 số tiền cần tiết kiệm hàng tháng sẽ được tính trong ô H54 và
 tổng số tiền cần tiết kiệm mỗi năm được tính trong ô I54.</p>
