--- a/huu-ich/tich-luy.html
+++ b/huu-ich/tich-luy.html
@@ -287,7 +287,7 @@ data-ad-slot="5275186684">
 
   <h2 id="howmuch">Tích luỹ bao nhiêu tiền?</h2>
   <p>Chỉ cần làm phép nhân đơn giản, lấy số tiền bạn đang tiêu mỗi tháng nhân cho 12 là được số tiền tiêu mỗi năm, nhân tiếp cho 20 hay 30 là số tiền bạn cần có khi về hưu.
-  <br>Chưa đủ đâu! Còn phải tính trượt giá nữa. Chỉ cần trượt giá 7% mỗi năm thì sau 10 năm vật giá sẽ đắt gấp đôi, sau 20 năm đắt gấp bốn, sau 30 năm đắt gấp tám lần bây giờ. Như vậy con số ở trên phải nhân lên 8-10 lần nữa. Đó là chưa kể khi về già, tiền thuốc chữa bệnh còn tốn hơn nữa.
+  <br>Chưa đủ đâu! Còn phải tính trượt giá nữa. Chỉ cần trượt giá 7% mỗi năm thì sau 10 năm vật giá sẽ đắt gấp đôi, sau 20 năm đắt gấp bốn, sau 30 năm đắt gấp tám lần bây giờ. Như vậy số tiền ở trên phải nhân lên 8-10 lần nữa. Đó là chưa kể khi về già, tiền thuốc chữa bệnh còn tốn hơn nữa.
   <br>Giả sử bạn đang tiêu mỗi tháng <b>năm triệu đồng</b>. Với mức trượt giá khoảng 7%/ năm, 35 năm sau, bạn phải có <b>12-16 tỉ đồng</b> khi về hưu để đủ sống đến cuối đời mà không phải xin con, không phải đi bán vé số. Có sẵn số tiền đó khi về già, bạn có thể đi tập thể dục buổi sáng ở công viên, đánh cờ tướng với bạn già, đi chụp hình, đi bơi…
   <br>Làm sao để dành được số tiền quá lớn đó? Bạn <b>sẽ</b> có số tiền lớn đó nếu bạn tích luỹ <b>sớm, liên tục</b> và sinh lợi an toàn.</p>
   <h2 id="when">Khi nào thì bắt đầu tích luỹ?</h2>
