--- a/huu-ich/tien-thuong-cuoi-nam.html
+++ b/huu-ich/tien-thuong-cuoi-nam.html
@@ -242,7 +242,7 @@ data-ad-slot="5275186684">
   <ul>
     <li>Đa số dân chúng không quan tâm đến cuộc sống khi về già, vẫn còn ỷ lại vào truyền thống Trẻ cậy cha, già cậy con, nên không chú ý chuẩn bị quỹ hưu trí.</li>
     <li>Những người có hợp đồng lao động, được đóng bảo hiểm xã hội đều đặn cũng ít để ý xem mình đang được đóng bảo hiểm xã hội ở mức nào, cứ yên tâm rằng sau này chắc chắn có lương hưu mà không biết lương hưu cao hay thấp.</li>
-    <li>Đa số người lao động không được đóng bảo hiểm xã hội theo thu nhập thật mà chỉ được đóng theo hệ số lương nhân với lương tối thiểu theo quy định của nhà nước, con số đó thấp hơn nhiều so với thu nhập thật, cho nên lương hưu càng thấp hơn nữa.</li>
+    <li>Đa số người lao động không được đóng bảo hiểm xã hội theo thu nhập thật mà chỉ được đóng theo hệ số lương nhân với lương tối thiểu theo quy định của nhà nước, số đó thấp hơn nhiều so với thu nhập thật, cho nên lương hưu càng thấp hơn nữa.</li>
     <li>Những người may mắn đang được đóng bảo hiểm xã hội theo mức thu nhập thật cũng không có được lương hưu dồi dào như trước khi về hưu. Theo quy định của Luật Bảo hiểm Xã hội thì lương hưu được nhận khoảng 45%-75% mức lương bình quân đã đóng BHXH trong suốt thời gian đóng. Với tốc độ tăng lương hàng năm (do lạm phát cộng với sự thăng tiến nghề nghiệp), thì mức lương bình quân đó rất thấp so với thu nhập trước khi về hưu.
     Giả sử lương tăng đều 10% mỗi năm thì số trung bình của mức lương trong 35 năm chỉ bằng 30% mức lương năm cuối, như vậy lương hưu chỉ bằng 22,5% lương trước khi về hưu.
     Giả sử lương tăng đều 15% mỗi năm thì số trung bình của mức lương trong 35 năm chỉ bằng 21% mức lương năm cuối, như vậy lương hưu chỉ bằng 15,8% lương trước khi về hưu.
