--- a/kinh-nghiem/linh-tinh/CBDC.html
+++ b/kinh-nghiem/linh-tinh/CBDC.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Phân biệt các Tần số của màn hình TV</title>
-<meta name="description" content="Phân biệt các số về tần số của màn hình TV, LCD, plasma" />
-<meta name="keywords" content="hữu ích, tv, tần số">
-<link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/tan-so-cua-tv">
+<title>Tìm-hiểu Tiền-điện-tử do chính-phủ phát-hành—Central Bank Digital Currency</title>
+<meta name="description" content="https://en.wikipedia.org/wiki/Central_bank_digital_currency" />
+<meta name="keywords" content="tài-chính, cá-nhân, doanh-nghiệp, tiền-điện-tử, CBDC, Pi-Network">
+<link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/CBDC">
 
 <!-- in head of html file -->
 <meta charset='utf-8'>
@@ -223,53 +223,58 @@ data-ad-slot="5275186684">
     <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
-  <h1>Tần số của màn hình TV</h1>
-  <p>Nếu đang chọn mua một cái TV LCD hoặc Plasma bạn sẽ phải bối rối trước các số Hz khác nhau liên quan đến các TV này. Bài này tóm tắt những thông tin chính về các số đó.</p>
-  <p>Để cho vấn đề được trình bày có đầu, có đuôi, chúng ta sẽ bắt đầu từ một số có từ trước khi có cái TV đầu tiên trên thế giới: đó là 24 hình mỗi giây.
-  <br>Đa số phim nhựa được chiếu lên màn ảnh ở tốc độ 24 hình mỗi giây. Lúc ban đầu, phim chưa có tiếng thì có thể được chiếu ở tốc độ khoảng 16-23 hình mỗi giây, đủ cho người xem có cảm giác hình ảnh chuyển động tự nhiên. Từ những năm 1920, khi bắt đầu sản xuất phim có tiếng thì tốc độ được chọn là 24 hình mỗi giây. 24 là số nhỏ nhất để tiếng trong phim có chất lượng đủ tốt. (<a href="https://en.wikipedia.org/wiki/Film" target="_blank">Xem wikipedia</a>)</p>
-  <p>Máy TV không chiếu được nguyên một hình ngay một lúc như máy chiếu phim nhựa. Máy TV vẽ lần lượt từng điểm trên màn hình theo thứ tự từ trái sang phải thành một dòng, vẽ lần lượt xong dòng trên đến dòng dưới, khi vẽ xong dòng dưới cùng là tương đương với việc chiếu được một hình. Việc vẽ lần lượt như vậy gọi là <i>quét hình</i>.
-  <br>50Hz và 60Hz là tần số điện xoay chiều dân dụng ở các nước khác nhau trên thế giới và cũng là tần số quét hình của TV trắng đen.
-  Người ta cố ý chọn tần số điện làm tần số quét hình của TV để cho nhiễu từ điện lưới vào TV sẽ không hiện lên màn hình hoặc nếu có hiện lên thì nó hầu như đứng yên hoặc trôi rất chậm trên màn hình theo chiều thẳng đứng. Mục đích là ít gây khó chịu cho người xem. Tần số 50Hz được dùng ở phần lớn châu Âu, châu Á. Tần số 60Hz được dùng ở <a href="https://en.wikipedia.org/wiki/File:WorldMap_Voltage%26Frequency.png" target="_blank">Bắc Mỹ, Nhật</a>.
-  Để tiết kiệm băng thông và chi phí, đài truyền hình không phát liên tục tất cả các dòng trong cùng một hình mà phát những dòng lẻ của một hình rồi phát những dòng chẵn của hình đó. TV quét hình theo cách này gọi là quét xen kẽ (interlacing).
-  <br>Khi kỹ thuật truyền hình màu phát triển, hầu hết những nước dùng điện 50Hz đều chọn kỹ thuật truyền hình màu PAL (một số chọn kỹ thuật SECAM), hầu hết những nước dùng điện 60Hz đều chọn kỹ thuật NTSC. Do băng thông 6MHz của một kênh truyền hình NTSC chật chội, khi đưa thêm màu vào truyền hình, tần số quét trong NTSC giảm đi một phần ngàn để tránh nhiễu giữa hình và tiếng. Tần số quét trong NTSC thực sự là 59,94Hz nhưng vẫn thường được nói một cách gần đúng là 60Hz <a href="https://www.tvtechnology.com/article/60026" target="_blank">như trước</a>.</p>
+<h1>Tìm-hiểu Tiền-điện-tử do chính-phủ phát-hành—Central Bank Digital Currency</h1>
+<div class="right">Viết lần đầu trong Tháng Tư, 2022.</div>
+<!-- body here -->
+<p>Ở các nước đã-phát-triển, việc không cần tiền-mặt trong thanh-toán đã rất phổ-biến. Với những món tiền lớn, người-ta chuyển qua ngân-hàng bằng séc hoặc lệnh-chuyển-tiền. Với những món tiền vừa phải, người ta dùng thẻ-thanh-toán (debit hoặc credit). Ví-điện-tử đã phổ-biến ở một số nơi để thanh-toán những món tiền lẻ hàng ngày. Tuy-nhiên tiền-mặt (tiền giấy, tiền polyme, tiền kim-loại) vẫn còn được dùng nhiều ở đa-số các nước. Ngoài-ra, ví-điện-tử cũng chưa phải là giải-pháp hoàn-hảo, vì nó cần phải có mạng Internet mới thanh-toán được và cần một tổ-chức làm trung-gian (vì vậy sẽ tốn phí).</p>
+<p>Chính-phủ các nước đang tìm cách thay-thế tiền-mặt để không tốn chi-phí in tiền và đúc tiền, đồng-thời tìm cách loại-bỏ trung-gian trong thanh-toán tiền lẻ. Đó là Central Bank Digital Currency—Tiền-điện-tử do chính-phủ phát-hành. Gọi tên dài như vậy để phân-biệt với các loại tiền-điện-tử do các tổ-chức tư-nhân tạo ra gần-đây dựa trên kỹ-thuật blockchain.</p>
+<p>Hiện-nay vẫn chưa có một định-nghĩa thống-nhất và chi-tiết các tính-chất của CBDC. Một vài nước đã bắt-đầu dùng thử CBDC, ví-dụ như China. Nhiều nước vẫn còn đang định-nghĩa hoặc đánh-giá các kỹ-thuật để thực-hiện.</p>
+<p>Nhiều tính-chất của CBDC được nêu ra, có những tính-chất trái-ngược nhau giữa các nước, như-là:</p>
+<ul>
+	<li>dùng được trên toàn thế-giới</li>
+	<li>miễn phí-thanh-toán phải trả cho tổ-chức trung-gian</li>
+	<li>ví tiền vô-danh hay định-danh</li>
+	<li>ghi sổ mọi giao-dịch hoặc không ghi</li>
+</ul>
+<p>CBDC được chia làm hai lớp:</p>
+<dl>
+	<dt>retail</dt>
+	<dd>được các cá-nhân và doanh-nghiệp dùng,
+	<br>Retail CBDC dùng ở các doanh-nghiệp thì chắc-chắn phải được định-danh tương-tự như các tài-khoản tiền ở ngân-hàng. Phần-lớn những giao-dịch của doanh-nghiệp ở Việt-Nam và các nước đã-phát-triển vốn đã không dùng tiền-mặt, không có nhiều khác-biệt với CBDC.</dd>
+	<dt>wholesale</dt>
+	<dd>được các tổ-chức tài-chính dùng trong những giao-dịch rất lớn, gồm cả chuyển tiền xuyên-biên-giới,
+	<br>Hiện-nay, việc chuyển tiền xuyên-biên-giới đã không dùng tiền-mặt, tuy-nhiên phải tốn nhiều thời-gian và chi-phí trung-gian. Wholesale CBDC sẽ cải-thiện tình-trạng đó.</dd>
+</dl>
+<p>Ngoài-ra, hoạt-động chuyển tiền xuyên-biên-giới trong bán-lẻ vốn đang nằm trong tay các công-ty thẻ-thanh-toán quốc-tế và một vài ví-điện-tử quốc-tế như PayPal chưa được nêu ra trong giải-pháp retail CBDC. Có-lẽ giải-pháp sẽ là các loại tiền-điện-tử phi-chính-phủ, ví-dụ như <a href="../may-tinh/pi-network">Pi Network</a>?</p>
+<p>Phần sau đây là một số thông-tin về retail CBDC ở các nước.</p>
+<h2>China</h2>
+<p>China đã phát-hành <a href="https://en.wikipedia.org/wiki/Digital_renminbi" target='_blank'>e-CNY để dùng thử từ Tháng Tư, 2020</a>. Nó là một dạng tài-khoản tiền có định-danh cá-nhân mở tại các ngân-hàng thương-mại. Có-thể dùng smartphone nối Internet để chuyển e-CNY giữa các tài-khoản qua sóng NFC hoặc QR code. Hoặc một loại thẻ thông-minh chuyển một vài lần offline sau đó đồng-bộ các giao-dịch với hệ-thống sổ.
+<br>Như-vậy e-CNY vẫn có tổ-chức trung-gian trong mọi thanh-toán nhỏ, đó là PBOC (Ngân-hàng Nhân-dân Trung-hoa).</p>
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
+<h2>Mỹ</h2>
+<p>Mỹ vẫn còn trong giai-đoạn định-nghĩa CBDC. Ngày 28/3/2022, một <a href="https://lynch.house.gov/_cache/files/5/0/500162f9-7fce-4981-b9b9-16bf22e10ede/83EE032381B9431A65DE22B213D3A10E.rep.-lynch-ecash-act-fact-sheet.pdf" target='_blank'>dự-luật về e-cash</a> liên-quan đến retail CBDC cho cá-nhân được trình lên quốc-hội để xem-xét. Theo dự-luật đó:</p>
+<ul>
+	<li>e-cash phải an-toàn, ẩn-danh</li>
+	<li>e-cash phải hoạt-động được với các hệ-thống tài-chính hiện có</li>
+	<li>e-cash phải dùng được trong thanh-toán offline giữa người dân với nhau</li>
+	<li>e-cash phải phù hợp với các quy-định chống rửa tiền, chống khủng-bố hiện có</li>
+	<li>thử-nghiệm e-cash với ít nhất hai loại hardware: thẻ chip hoặc điện-thoại di-động</li>
+	<li>e-cash không có thông-tin định-danh cá-nhân, không thu-thập thông-tin giao-dịch</li>
+</ul>
+<p>Dự-luật đó còn khá sơ-sài, nó chưa nêu ra cách các doanh-nghiệp dùng e-cash như-thế-nào, doanh-nghiệp thì không thể ẩn-danh.</p>
+<p>E-cash hoạt-động được với hệ-thống tài-chính hiện có tức là việc chuyển-tiền gián-tiếp vẫn qua hệ-thống ngân-hàng hiện nay, và vẫn bị ghi sổ. Chính-phủ Mỹ chỉ theo-dõi tiền với mục-đích chống rửa-tiền và chống khủng-bố, Chính-phủ Mỹ không cần theo dõi việc dân Mỹ dùng vài ngàn đô-la mua quà tặng bồ hay ăn-tiệc ở nhà-hàng nào.</p>
+<p>Mục-đích của e-cash trong dự-luật này là để tạo ra tiện-nghi cho dân-chúng, giảm chi-phí thanh-toán không tiền-mặt, tiết-kiệm chi-phí in tiền. Không có mục-đích quản-lý tất-cả mọi khoản tiền lẻ như e-CNY của TQ.</p>
 
-  <p>Khoảng hơn 10 năm trước, tiến bộ trong kỹ thuật điện tử cho phép người ta làm ra những TV có thể quét hình nhanh gấp đôi tín hiệu của đài truyền hình, những TV 100Hz ra đời (được gọi là TV 120Hz ở những nước dùng kỹ thuật NTSC).
-  Những TV này vẫn nhận tín hiệu 50/60Hz bình thường nhưng nó vẽ mỗi hình lên màn hình hai lần liên tiếp để giảm sự nhấp nháy của hình. Một số TV 100/120Hz gần đây không lặp lại hình hai lần một cách đơn giản mà vẽ ra một hình trung gian giữa hai hình nhận được liên tiếp (Sony gọi là <b>Motionflow</b>, Panasonic gọi là <b>Motion Picture Pro</b>, Samsung gọi là <b>Motion Plus</b>), như vậy thì hình ảnh chuyển động sẽ đẹp hơn.
-  Tính năng này thường gặp ở các TV LCD, nhưng không phải TV LCD 100/120Hz nào cũng có tính năng này. Và cũng cần chú ý rằng TV 100/120Hz không thể nhận được tín hiệu 100/120Hz mà chỉ nhận tín hiệu 50/60Hz. Nhiều người dùng TV LCD với máy tính cứ lầm tưởng rằng TV 120HZ thì có thể nhận tín hiệu lên tới 120Hz từ máy tính. Những TV LCD đời mới nhất có tần số quét lên đến 200/240Hz, đây là sự nâng cao của kỹ thuật 100/120Hz.</p>
-  <p>Để cạnh tranh với các số 120Hz, 240Hz của TV LCD, các nhà sản xuất TV Plasma khoe ra các số sub-field driving 480Hz, 600Hz, 660Hz, 840Hz. Nhưng ý nghĩa của những số sub-field driving này hoàn toàn khác với tần số quét của TV LCD.
-  Đặc tính của màn hình Plasma là từng điểm sáng có thể sáng lên và tối đi nhanh hơn nhiều lần so với LCD và các điểm sáng của màn hình Plasma thay đổi độ sáng bằng cách thay đổi thời gian phát sáng, tổng số thời gian sáng của mỗi điểm sẽ ứng với độ sáng mà mắt người cảm thấy ở điểm đó.
-  Do đó, màn hình Plasma sẽ quét qua các điểm nhiều lần cho mỗi hình, điểm sáng được bật hay tắt trong các lần quét sao cho điểm đó có độ sáng phù hợp với hình cần vẽ. Nhân số lần quét với tần số 60Hz ta sẽ thấy các số sub-field driving 480, 600, 660, 840 như trên (với 50Hz thì kết quả là 400, 500, 550, 700).
-  Như vậy, số sub-field driving càng lớn thì càng có khả năng thể hiện nhiều mức sáng (hay là độ tương phản), số này không thể đem so với tần số quét của TV LCD. (<a href="https://www.avsforum.com/avs-vb/showthread.php?t=1047145" target="_blank">Xem thảo luận</a>)</p>
+<p>Có-thể thấy rằng e-cash của Mỹ gần giống tiền-mặt và có những điểm hay hơn tiền-mặt. Trong khi đó e-CNY giống như một tài-khoản ngân-hàng bỏ bớt đi khoản phí-chuyển-tiền.
+<br>Việc ghi sổ mọi giao-dịch tiền lẻ của e-CNY là một việc không cần-thiết. Chính-phủ không cần ghi sổ mỗi khi trẻ-em mua một cây kem hay viên kẹo, khi người-nội-trợ mua rau hay cá…
+<br>Tuy-nhiên việc không ghi-sổ như e-cash sẽ đưa đến những khó-khăn trong việc chống tiền giả. Hacker sẽ tìm cách để ghi tiền giả vào ví tiền, nếu ghi thành-công thì không ai có thể phát-hiện ra đó là tiền giả.</p>
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
-
-  <p>TV Plasma và LCD thường được dùng để xem phim (từ máy phát đĩa Blue-ray, HTPC, HD player, hay HDTV set-top box). Những phim có nguồn gốc phim nhựa thường có tốc độ 24 hình mỗi giây. Nếu phim được số hoá theo cách tương thích với thiết bị NTSC thì tốc độ chính xác là 23,976 hình mỗi giây, nhưng vẫn được gọi gần đúng là 24. Để xem phim tốt nhất, một số TV có chế độ 24p (quét 24 hình mỗi giây).
-  Mặc dù 120 là bội số của 24 nhưng không phải tất cả TV 120Hz đều có chế độ 24p. Cũng giống như có nhiều cách xử lý tín hiệu 50Hz, có nhiều mức độ thực hiện 24p. Mức độ đơn giản nhất là vẽ 24 hình mỗi giây, mức độ cao hơn là lặp lại mỗi hình để vẽ 48 hoặc 96 hình mỗi giây để hình đỡ nhấp nháy, cao nhất là vẽ ra một hoặc ba hình trung gian giữa hai hình liên tiếp để ra 48 hoặc 96 hình khác nhau mỗi giây (Panasonic gọi là <b>24p Smooth Film</b>, Samsung gọi là <b>Cinema Smooth</b>).
-Nếu TV không có chế độ 24p thì nguồn phát (máy phát đĩa Blue-ray, HTPC, HD player, hay HDTV set-top box) sẽ phải lặp lại một số hình từ 24 hình mỗi giây để đưa cho TV 50 hay 60 hình mỗi giây, việc này gọi là pull-down, hình ảnh chuyển động trên TV sẽ không được tự nhiên. Đối với những người hay xem phim thì chế độ 24p có giá trị hơn chế độ 100/120Hz. Khi đã có một TV có chế độ 24p thì đừng bỏ phí nó khi xem phim, hãy chọn đúng chế độ 24p ở nguồn phát và đừng tắt chế độ 24p trên TV.</p>
-  <p>Bài này đã được gửi vào diễn đàn <a href="https://www.hdvietnam.com/diendan/31-hd-cho-nguoi-moi-bat-dau/40977-cac-con-so-hz-quanh-nhung.html" target="_blank">hdvietnam.com</a> ngày 29-12-2009.</p>
-  <div class="todiscuss">
-  Các bài liên quan:
-  <br>* <a href="/kinh-nghiem/linh-tinh/">Những kinh nghiệm khác</a>
-  </div>
-
+<div class="todiscuss">
+	Tham-khảo:
+	<br> * <a href="https://vi.wikipedia.org/wiki/Ti%E1%BB%81n_%C4%91i%E1%BB%87n_t%E1%BB%AD_c%E1%BB%A7a_ng%C3%A2n_h%C3%A0ng_trung_%C6%B0%C6%A1ng" target='_blank'>Wikipedia Việt</a>
+	<br> * <a href="https://en.wikipedia.org/wiki/Central_bank_digital_currency" target='_blank'>Wikipedia Anh</a>
+	<br> * <a href="https://bis.org" target='_blank'>Bank for International Settlements</a>
+</div>
   <hr>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
