--- a/kinh-nghiem/may-tinh/gnucash-dai-han.html
+++ b/kinh-nghiem/may-tinh/gnucash-dai-han.html
@@ -294,7 +294,7 @@ Khi mua và bán cổ phiếu, người đầu tư cũng tốn phí giao dịch;
 <h2>3. Xem báo cáo kết quả đầu tư</h2>
 <h3>3.1. Kết quả của một khoản đầu tư</h3>
 <p>Kết quả của một việc đầu tư tài sản được thể hiện bằng tổng số tiền đã đưa vào tài sản đó từ đầu đến lúc báo cáo, giá trị tài sản đó ở thời điểm báo cáo, tổng lợi nhuận đã rút ra từ tài sản đó từ đầu đến lúc báo cáo.
-<br>Để xem được ba con số trên trong một bản báo cáo thì ta dùng loại báo cáo nhiều phần, mỗi phần cho một con số.</p>
+<br>Để xem được ba số trên trong một bản báo cáo thì ta dùng loại báo cáo nhiều phần, mỗi phần cho một số.</p>
 <ul><li>Trong menu <b>Báo cáo</b>, chọn <b>Mẫu và tự chọn</b><b>→Báo cáo đa cột tự chọn</b>,</li>
 <li>trong trang báo cáo mới tạo, bấm nút <b>Tuỳ chọn</b>,</li>
 <li>gõ vào Tên báo cáo, ví dụ Báo cáo cổ phiếu VNM</li>
