--- a/kinh-nghiem/may-tinh/ham-tai-chinh.html
+++ b/kinh-nghiem/may-tinh/ham-tai-chinh.html
@@ -231,7 +231,7 @@ data-ad-slot="5275186684">
 <p>PV tính số tiền cần đầu tư để có thể rút ra một số tiền bằng nhau ở các thời điểm cách đều nhau khi biết trước lãi suất không đổi trong suốt thời gian đầu tư.</p>
 <p>Ví dụ: tính số tiền cần có khi con bạn bắt đầu học đại học sao cho có thể rút ra 120 triệu đồng mỗi năm trong 5 năm, phần còn lại gửi tiết kiệm lãi suất 7%/năm, sau 5 năm đó vẫn còn lại 50 triệu đồng để mua sắm cho con chuẩn bị bắt đầu đi làm.
 <br>Kết quả PV(7%;5;120.000.000;50.000.000;1)=-562.114.659,75 ₫.
-<br>Kết quả này khác xa con số 650.000.000 ₫ (5*120.000.000+50.000.000). Khác xa như vậy nhờ tận dụng việc đầu tư, đầu tư càng <a href="/huu-ich/tich-luy-dai-han">dài hạn</a> thì kết quả càng cách xa, bạn có tận dụng việc <a href="/huu-ich/cach-dau-tu">đầu tư</a> không?
+<br>Kết quả này khác xa số 650.000.000 ₫ (5*120.000.000+50.000.000). Khác xa như vậy nhờ tận dụng việc đầu tư, đầu tư càng <a href="/huu-ich/tich-luy-dai-han">dài hạn</a> thì kết quả càng cách xa, bạn có tận dụng việc <a href="/huu-ich/cach-dau-tu">đầu tư</a> không?
 <br>Dấu trừ trong kết quả có nghĩa là ta phải xuất số tiền đó ra vào đầu năm thứ 1.</p>
  
 <h2>PMT Payment</h2>
