--- a/kinh-nghiem/may-tinh/pin-lithium-ion.html
+++ b/kinh-nghiem/may-tinh/pin-lithium-ion.html
@@ -231,7 +231,7 @@ data-ad-slot="5275186684">
 Pin lithium được dùng khắp nơi quanh ta: máy chụp hình, máy quay phim, điện thoại, máy tính, headphone, loa, đồ chơi, vợt bắt muỗi, xe điện... Tuổi thọ của pin ảnh hưởng đến chi phí sử dụng các món đồ điện tử, những món đồ nhỏ gọn thì không thể thay pin được nên khi pin hư thì phải bỏ luôn.
 </p>
 </p>
-Các nhà sản xuất thường công bố rằng tuổi thọ của pin lithium là 1000 chu kỳ sạc, tức là sau mỗi lần sạc thì cục pin bị giảm khả năng tích điện một chút và sau 1000 lần sạc thì khả năng tích điện của cục pin chỉ còn 80% so với ban đầu. Tuy nhiên tui rất nghi ngờ con số 1000 lần sạc đó. Nếu mỗi ngày sạc một lần thì sau 1000 ngày, tức là gần ba năm, cục pin mới giảm đi một chút. Trong thực tế, tui thấy pin giảm khả năng tích điện rất nhanh.
+Các nhà sản xuất thường công bố rằng tuổi thọ của pin lithium là 1000 chu kỳ sạc, tức là sau mỗi lần sạc thì cục pin bị giảm khả năng tích điện một chút và sau 1000 lần sạc thì khả năng tích điện của cục pin chỉ còn 80% so với ban đầu. Tuy nhiên tui rất nghi ngờ số 1000 lần sạc đó. Nếu mỗi ngày sạc một lần thì sau 1000 ngày, tức là gần ba năm, cục pin mới giảm đi một chút. Trong thực tế, tui thấy pin giảm khả năng tích điện rất nhanh.
 </p>
 <h2>Hiểu rõ hơn về chu kỳ sạc</h2>
 <div class="flright"><amp-img alt="Lithium 80%" src="/images/lithium80.jpg" width="720" height="1280" layout="responsive"></amp-img></div>
