--- a/kinh-nghiem/may-tinh/sec-digit-life.html
+++ b/kinh-nghiem/may-tinh/sec-digit-life.html
@@ -268,7 +268,7 @@ Nội-dung:
 <h2>Những mối-đe-doạ đến máy-điện-thoại</h2>
 <p>Những máy-điện-thoại-di-động và máy-tính-bảng chứa một phần đáng-kể danh-tính trong không-gian-số của chúng-ta. Chúng cũng dễ bị nằm ngoài tầm-kiểm-soát của chúng-ta khi bị mất, bị trộm, bị người khác cầm trong lúc chúng-ta không để-ý.</p>
 <p>Để ngăn-ngừa những trường-hợp không cố-ý xem thông-tin cá-nhân trong smartphone thì khá đơn-giản.</p>
-<p>Điều đầu-tiên, khi bạn không ở nhà, bạn nên luôn-luôn, không có ngoại-lệ, khoá thiết-bị trước khi rời tay khỏi nó. Bạn nên khoá điện-thoại bằng cách chắc-chắn nhất mà bạn cảm thấy thoải-mái, đừng dùng PIN bốn con số vì nó gần như vô-dụng. Để chắc-chắn hơn, hãy dùng password hoặc passcode có ít nhất sáu chữ số.</p>
+<p>Điều đầu-tiên, khi bạn không ở nhà, bạn nên luôn-luôn, không có ngoại-lệ, khoá thiết-bị trước khi rời tay khỏi nó. Bạn nên khoá điện-thoại bằng cách chắc-chắn nhất mà bạn cảm thấy thoải-mái, đừng dùng PIN bốn chữ số vì nó gần như vô-dụng. Để chắc-chắn hơn, hãy dùng password hoặc passcode có ít nhất sáu chữ số.</p>
 <p>Điều thứ-hai, điện-thoại của bạn phải được khoá ngay khi tắt màn-hình, không có khoảng thời-gian cho phép bật màn-hình lại trong tình trạng không khoá. Và hãy đặt cho điện-thoại của bạn tự xoá hết thông-tin khi password bị sai mười lần.</p>
 <p>Và cũng thường-xuyên backup điện-thoại của bạn. Cách an-toàn nhất là backup vào máy-tính cá-nhân và thông-tin được mã-hoá. Người dùng iOS 13 trở về sau có thể backup vào iCloud một cách an-toàn.</p>
 <p>Hãy upgrade OS trong máy-điện-thoại của bạn tới bản mới nhất để chặn những kẽ hở đã biết. Upgrade ngay khi smartphone báo có bản mới, đừng chờ xem bản mới đó có ổn-định không, có bug không.</p>
