--- a/huu-ich/dau-tu-co-phieu/index.html
+++ b/huu-ich/dau-tu-co-phieu/index.html
@@ -4,7 +4,6 @@
 <title>Đầu-tư cổ-phiếu</title>
 <meta name="description" content="Phương pháp bình quân giá cổ phiếu: Đầu tư cổ phiếu đều đặn sẽ có kết quả tốt" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, đầu tư, cổ phiếu, DCA, bình quân">
-<link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/dau-tu-co-phieu/">
 
 <!-- in head of html file -->
@@ -260,7 +259,7 @@ data-ad-slot="5275186684">
   <h2>Lịch sử ủng hộ DCA-6 hơn DCA-36</h2>
   <p>Tất cả những điều trên chỉ là lý thuyết, ý kiến chủ quan dựa trên khái niệm mơ hồ về thị trường cổ phiếu. Cần dùng số liệu lịch sử để thấy các khoảng thời gian khác nhau sẽ cho kết quả như thế nào. Để làm như vậy, tôi định nghĩa một quy trình đầu tư rõ ràng. Ví dụ tôi thực hiện DCA-12 như sau: đưa 1/12 số tiền vào thị trường cổ phiếu trong ngày đầu tiên của tháng đầu tiên, phần còn lại để trong thị trường tiền tệ. Một tháng sau, đưa 1/11 số tiền trong thị trường tiền tệ vào thị trường cổ phiếu, cứ như vậy suốt 12 tháng.
   <br>Một cách tương tự: Chia số tiền ban đầu thành N phần bằng nhau. Đưa phần đầu tiên vào thị trường cổ phiếu. Để phần thứ hai trong thị trường tiền tệ một tháng rồi mới đưa nó và lãi của nó sang thị trường cổ phiếu. Để phần thứ ba trong thị trường tiền tệ hai tháng rồi mới đưa nó và lãi của nó sang thị trường cổ phiếu… Như vậy lượng tiền được đưa vào thị trường cổ phiếu tăng đều về số tiền, nhưng chúng bằng nhau khi quy về thời điểm ban đầu (time-value-adjusted).
-  <br>Câu hỏi: Làm thế nào để đo độ rủi ro mà chúng ta muốn chống đỡ bằng DCA? Tôi hình dung rằng điều cần phải tránh nhất là đưa hết một cục tiền vào thị trường cổ phiếu rồi vài tháng sau thấy rằng giá trị của nó bị giảm. Đương nhiên, khi chúng ta đưa 10.000$ một lúc vào TTCK, chúng ta hy vọng nó sẽ trở thành 11.000$ hay 12.000$ sau một năm. Nếu chỉ được có 10.500$ thì cũng không quá tệ; chúng ta có thể có kết quả tương đương khi để trong thị trường tiền tệ. Nếu cuối cùng vẫn chỉ có 10.000$ thì thật thất vọng và đáng giận, nhưng chúng ta đã biết rằng đầu tư cổ phiếu không phải chắc chắn có lời. Lo sợ, thất vọng, giận dữ, và hối tiếc xảy ra khi chúng ta có được ít hơn con số ban đầu.</p>
+  <br>Câu hỏi: Làm thế nào để đo độ rủi ro mà chúng ta muốn chống đỡ bằng DCA? Tôi hình dung rằng điều cần phải tránh nhất là đưa hết một cục tiền vào thị trường cổ phiếu rồi vài tháng sau thấy rằng giá trị của nó bị giảm. Đương nhiên, khi chúng ta đưa 10.000$ một lúc vào TTCK, chúng ta hy vọng nó sẽ trở thành 11.000$ hay 12.000$ sau một năm. Nếu chỉ được có 10.500$ thì cũng không quá tệ; chúng ta có thể có kết quả tương đương khi để trong thị trường tiền tệ. Nếu cuối cùng vẫn chỉ có 10.000$ thì thật thất vọng và đáng giận, nhưng chúng ta đã biết rằng đầu tư cổ phiếu không phải chắc chắn có lời. Lo sợ, thất vọng, giận dữ, và hối tiếc xảy ra khi chúng ta có được ít hơn số ban đầu.</p>
 
 <!-- AMP display ads -->
 <amp-ad width="100vw" height="320"
@@ -274,7 +273,7 @@ data-ad-slot="5275186684">
 
   <p>Với DCA-36, tôi đã xem lại 493 chu kỳ 36 tháng trong 44 năm (1953-1996). Tôi đã tính được rằng dùng DCA-36 sẽ tốn 7,4% số tiền so với cách đưa ngay một cục tiền.
   <br>Nhưng sự tốn kém không phải là yếu tố cần xem xét duy nhất. Chúng ta phải xem xét nguy cơ lỗ. Chú ý: Lợi nhuận TTCK tính ở đây dựa trên lợi nhuận của cac công ty S&amp;P500 với cổ tức được đầu tư trở lại. Lợi nhuận thị trường tiền tệ được tính theo lãi suất kỳ hạn ba tháng. TTCK tăng khoảng hơn 5% mỗi năm trong 44 năm đó; cách đầu tư DCA-36 làm cho tiền nằm ngoài thị trường chứng khoán trung bình khoảng 17,5 tháng, tức là khoảng 1,5 năm, như vậy cách đầu tư theo kiểu đưa ngay một cục tiền sẽ lợi hơn DCA-36 khoảng 1,5 lần 5%.
-  <br>Thật không may, không có một con số thật sự tốt để đo độ rủi ro. Tất cả chúng ta đều biết rằng dùng độ lệch chuẩn để đo độ rủi ro khi đầu tư cổ phiếu thì không thật thoả mãn. Vậy cách sau đây cung cấp số liệu thống kê để bạn tự rút ra kết luận về rủi ro và lợi nhuận và chi phí khi dùng DCA.
+  <br>Thật không may, không có một số thật sự tốt để đo độ rủi ro. Tất cả chúng ta đều biết rằng dùng độ lệch chuẩn để đo độ rủi ro khi đầu tư cổ phiếu thì không thật thoả mãn. Vậy cách sau đây cung cấp số liệu thống kê để bạn tự rút ra kết luận về rủi ro và lợi nhuận và chi phí khi dùng DCA.
   <br>Chỉ có 30 trong số 493 chu kỳ DCA-36 mà cách đầu tư ngay một cục dẫn đến lỗ. Chúng ta muốn có cách đầu tư tốt hơn trong 30 trường hợp đó. DCA phải cho được kết quả tốt hơn thì mới đáng dùng. Tôi đặt ra một tiêu chuẩn cho hiệu quả của DCA là phải đem lại kết quả cao hơn 5% so với cách đầu tư ngay một cục.
   <br>Trong 30 trường hợp trên, chỉ có 16 lần DCA cho kết quả tốt hơn 5%. Đi vào chi tiết thì trong 30 trường hợp trên:</p>
   <ul>
