--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -383,7 +383,7 @@ data-ad-slot="5275186684">
     <li>Nếu tiền tích luỹ không có đủ tại thời điểm cần dùng thì cần phải giảm các số tiền M cần có hoặc lùi thời điểm ra xa hơn.</li>
     <li>Nếu thu nhập T trong kết quả tính cao hơn thực tế thì cần phải giảm chi tiêu C, giảm các khoản trả góp G và giảm số tiền M.</li>
     <li>Nếu thu nhập T trong kết quả tính thấp hơn thực tế thì có thể tăng chi tiêu C, tăng các khoản trả góp G và các số tiền M, hoặc rút ngắn thời gian đi làm tích luỹ, tức là về hưu sớm.</li>
-    <li>Thay đổi ở bất kỳ một trong các con số trên tại bất cứ thời điểm nào trong suốt lộ trình đều ảnh hưởng lên toàn bộ lộ trình.</li>
+    <li>Thay đổi ở bất kỳ một trong các số trên tại bất cứ thời điểm nào trong suốt lộ trình đều ảnh hưởng lên toàn bộ lộ trình.</li>
   </ul>
   </div>
   </section>
@@ -463,8 +463,8 @@ Tăng dần số tiền đầu tư là bí quyết giúp cho bạn dễ bắt đ
   <amp-accordion>
   <section>
   <h4 class="accordion-header">Dự tính mức lương hưu nhận từ Bảo hiểm Xã hội (bấm vào đây để xem chi tiết)</h4>
-  <p>Hai ô B19 và B20 để ghi số tháng <b>đã</b> đóng BHXH và tổng số lương đã đóng BHXH. Bạn phải mở sổ BHXH của bạn để cộng ra hai con số này. Bạn có thể tìm thông tin ở <a href="http://baohiemxahoi.gov.vn/" target="_blank">trang web của BHXH</a>.
-  <br>Ô B22 ghi mức lương đóng BHXH của bạn hiện nay, hãy xem trong sổ BHXH để biết con số này, nó có thể thấp hơn nhiều so với lương bạn đang nhận hàng tháng.
+  <p>Hai ô B19 và B20 để ghi số tháng <b>đã</b> đóng BHXH và tổng số lương đã đóng BHXH. Bạn phải mở sổ BHXH của bạn để cộng ra hai số này. Bạn có thể tìm thông tin ở <a href="http://baohiemxahoi.gov.vn/" target="_blank">trang web của BHXH</a>.
+  <br>Ô B22 ghi mức lương đóng BHXH của bạn hiện nay, hãy xem trong sổ BHXH để biết số này, nó có thể thấp hơn nhiều so với lương bạn đang nhận hàng tháng.
   <br>Ô B24 để ghi dự báo mức tăng lương BHXH, gồm tăng do trượt giá cộng với tăng do sự thăng tiến của bạn. Để thận trọng thì bạn có thể ghi số nhỏ trong ô này. Đặc biệt là trong trường hợp bạn đang đóng BHXH với mức lương cao thì bạn sẽ nhanh chóng chạm đến mức lương tối đa của BHXH (là 20 lần lương tối thiểu theo quy định của luật hiện hành), trong trường hợp này bạn nên cho mức tăng lương do thăng tiến khoảng 1%/năm thôi.
   <br>Ô B25 là dự báo mức lương đóng BHXH cuối cùng của bạn trước khi về hưu. Ô B26 là mức lương đóng BHXH bình quân trong suốt thời gian bạn đi làm.
   <br>Ô B27 là dự báo lương hưu tối đa của bạn. Trong bảng tính này, chúng ta tạm xem như lương hưu không đổi trong suốt thời gian về hưu, nhưng trong thực tế thì chính phủ thường xuyên điều chỉnh tăng lương hưu theo mức trượt giá. Do không thể dự báo được việc điều chỉnh của chính phủ nên ta tạm không tính đến sự tăng đó, khi nào có tăng thì cuộc đời thật sẽ đẹp hơn kế hoạch 😆.</p>
@@ -555,7 +555,7 @@ Dòng nào để trống hoặc ghi zero ở cột C (Số tiền cần có) ngh
     <li>Thời gian tính tiền nuôi con trong trang Trả-góp kết thúc khi con bắt đầu vào đại học nếu là trường đại học xa nhà, hoặc đến khi học xong đại học nếu học gần nhà. Ngân sách để học đại học cũng thay đổi theo sự lựa chọn này. Bạn hãy cố gắng lập kế hoạch cho tình huống tốt nhất, khi thực tế xảy ra ít tốn kém hơn thì bạn lại có dư một số tiền và hoàn thành mục tiêu cuối cùng nhanh hơn.
     <li>Kế hoạch chuẩn bị tiền đặt cọc mua nhà sẽ được nối tiếp bằng khoản trả góp mua nhà.</li>
     <li>Mục tiêu tích luỹ quỹ hưu là mục tiêu sau cùng trong lộ trình tài chính, tất cả các khoản trả góp, hợp đồng bảo hiểm đều không đóng tiền sau năm hoàn thành quỹ hưu.
-    <br>Bảng tính sẽ hiện lên dấu gạch đè lên con số khi bạn nhập thời hạn trả góp, đóng phí bảo hiểm, mục tiêu tài chính sau năm hoàn thành mục tiêu quỹ hưu. Khi thấy dấu gạch đè thì bạn cần phải sửa năm lại.
+    <br>Bảng tính sẽ hiện lên dấu gạch đè lên số năm khi bạn nhập thời hạn trả góp, đóng phí bảo hiểm, mục tiêu tài chính sau năm hoàn thành mục tiêu quỹ hưu. Khi thấy dấu gạch đè thì bạn cần phải sửa năm lại.
     <br>Nếu bạn có những mục tiêu cần chi trễ hơn thời điểm dự tính về hưu mà bạn có thể tích luỹ nhanh để hoàn thành số tiền trước khi cần đến thì hãy sửa năm cần dùng tiền bằng với năm về hưu.
     <br>Trong thực tế có thể vẫn phải đóng một số tiền <strong>nhỏ</strong> khi đã về hưu, trong trường hợp đó bạn vẫn ghi thời hạn đóng tiền kết thúc cùng lúc với năm hoàn thành mục tiêu quỹ hưu, số tiền chưa kịp đóng thì trừ vào ô B14 của trang Quỹ-hưu.</li>
   </ul>
@@ -592,11 +592,11 @@ Dòng nào để trống hoặc ghi zero ở cột C (Số tiền cần có) ngh
   <br>Đường đầu tư thêm cũng tăng dần cho đến năm về hưu do thu nhập tăng theo thâm niên và theo lạm phát, và trở về zero trong những năm về hưu. Đường đầu tư thêm cũng có những điểm gãy, đó là những năm bắt đầu một khoản trả góp. Có vài năm số tiền đầu tư thêm giảm xuống dưới zero do khoản trả góp lớn. Số tiền đầu tư thêm âm có nghĩa là bạn lấy tiền từ tài sản đầu tư ra để trả góp, việc này là chấp nhận được <span class="tmark">nếu tổng tài sản đầu tư vẫn còn lớn hơn zero</span>.</p>
   <div><amp-img alt="Lộ trình tài chính" src="/images/KHTCp1.png" width="600" height="371" layout="responsive"></amp-img></a></div>
   <h4>Điều chỉnh lộ trình</h4>
-  <p>Dòng số ba trong trang Lộ-trình cho biết con số cụ thể thu nhập và chi tiêu trong năm đầu tiên của lộ trình. Số chi tiêu chính là con số bạn đã nhập vào trong trang TT-chung.
-  <br>Nếu thu nhập trung bình hàng tháng trong năm đầu tiên của bạn thấp hơn con số trong ô F3, bạn chưa thể thực hiện lộ trình này. Bạn cần phải: giảm chi tiêu, giảm hoặc dời các khoản <a href="khtcp1#tra-gop">trả góp</a> lại trễ hơn, giảm các mục tiêu để con số hợp với thực tế. Khi nào thu nhập tăng lên, bạn lại điều chỉnh các mục tiêu của mình cho phù hợp. Khi bạn giảm chi tiêu, số tiền tích luỹ trong hiện tại tăng lên, đồng thời quỹ hưu cần có trong tương lai giảm xuống, lộ trình của bạn được cải thiện từ hai phía nên sẽ tốt hơn.
+  <p>Dòng số ba trong trang Lộ-trình cho biết số cụ thể thu nhập và chi tiêu trong năm đầu tiên của lộ trình. Số chi tiêu chính là số bạn đã nhập vào trong trang TT-chung.
+  <br>Nếu thu nhập trung bình hàng tháng trong năm đầu tiên của bạn thấp hơn số trong ô F3, bạn chưa thể thực hiện lộ trình này. Bạn cần phải: giảm chi tiêu, giảm hoặc dời các khoản <a href="khtcp1#tra-gop">trả góp</a> lại trễ hơn, giảm các mục tiêu để số F3 hợp với thực tế. Khi nào thu nhập tăng lên, bạn lại điều chỉnh các mục tiêu của mình cho phù hợp. Khi bạn giảm chi tiêu, số tiền tích luỹ trong hiện tại tăng lên, đồng thời quỹ hưu cần có trong tương lai giảm xuống, lộ trình của bạn được cải thiện từ hai phía nên sẽ tốt hơn.
   <br>Khi bạn dời khoản trả góp lại trễ hơn, tiền đầu tư sẽ được sinh lợi nhiều hơn, và hy vọng rằng khoản trả góp có thể rẻ hơn. Nếu khoản trả góp là mua nhà thì việc dời lại trễ hơn có thể làm nó rẻ hơn hoặc đắt hơn tuỳ theo biến động của thị trường bất động sản.</p>
-  <p>Nếu thu nhập trung bình hàng tháng trong năm đầu tiên của bạn cao hơn con số trong ô F3, chúc mừng bạn! Bạn có thể chọn trong ba hướng sau: chi tiêu nhiều hơn, tăng các mục tiêu lên cao hơn, <a href="khtcp2">về hưu sớm hơn</a>. Bạn hãy điều chỉnh các con số trong ba hướng đó và xem lại lộ trình mới.</p>
-  <p>Trường hợp thu nhập trung bình hàng tháng trong năm đầu tiên của bạn cao hơn con số trong ô F3 nhưng biểu đồ tổng tài sản đầu tư có những lúc xuống dưới zero và bạn không thể dời các khoản trả góp lại trễ hơn. Trong trường hợp này bạn sẽ không giữ được một tỷ lệ chi tiêu trên thu nhập ổn định suốt đời mà buộc phải giảm chi tiêu trong thời gian đầu (khi có những khoản trả góp không thể dời lại trễ hơn). Để thể hiện việc giảm chi tiêu trong thời gian đầu, bạn hãy giảm Mức tăng khoản đầu tư thêm hàng năm trong ô B8 của trang <a href="khtcp1#tt-chung">TT-chung</a>, giảm dần số đó xuống và tính lại lộ trình cho đến khi ô F3 trong trang Lộ-trình gần sát thu nhập thực tế.</p>
+  <p>Nếu thu nhập trung bình hàng tháng trong năm đầu tiên của bạn cao hơn số trong ô F3, chúc mừng bạn! Bạn có thể chọn trong ba hướng sau: chi tiêu nhiều hơn, tăng các mục tiêu lên cao hơn, <a href="khtcp2">về hưu sớm hơn</a>. Bạn hãy điều chỉnh các số trong ba hướng đó và xem lại lộ trình mới.</p>
+  <p>Trường hợp thu nhập trung bình hàng tháng trong năm đầu tiên của bạn cao hơn số trong ô F3 nhưng biểu đồ tổng tài sản đầu tư có những lúc xuống dưới zero và bạn không thể dời các khoản trả góp lại trễ hơn. Trong trường hợp này bạn sẽ không giữ được một tỷ lệ chi tiêu trên thu nhập ổn định suốt đời mà buộc phải giảm chi tiêu trong thời gian đầu (khi có những khoản trả góp không thể dời lại trễ hơn). Để thể hiện việc giảm chi tiêu trong thời gian đầu, bạn hãy giảm Mức tăng khoản đầu tư thêm hàng năm trong ô B8 của trang <a href="khtcp1#tt-chung">TT-chung</a>, giảm dần số đó xuống và tính lại lộ trình cho đến khi ô F3 trong trang Lộ-trình gần sát thu nhập thực tế.</p>
   <p>Để giảm chi tiêu, bạn cần liệt kê các khoản chi của mình và chọn giảm khoản nào ít cần thiết nhất. Bạn có thể dùng mẫu trong trang Thu-chi để liệt kê chi tiêu.</p>
   <p>Sau khi điều chỉnh vào các trang, bạn làm lại bước <b>Tính lộ trình</b> ngay trên đây. Bạn lặp đi lặp lại việc này nhiều lần cho đến khi bạn có một lộ trình khả thi.</p>
 
@@ -656,7 +656,7 @@ Dòng nào để trống hoặc ghi zero ở cột C (Số tiền cần có) ngh
     <li>'TT-chung'!B10 (chi tiêu hiện nay)</li>
   </ul>
   <p>Chú ý các mục tiêu và các khoản trả góp đều hoàn thành trước hoặc cùng năm về hưu sớm.
-  <br>Trang Quỹ-hưu sẽ tính ra mức chi tiêu ở đầu giai đoạn hai và đầu giai đoạn ba. Chúng ta sẽ dùng hai con số đó ở các bước tiếp theo.</p>
+  <br>Trang Quỹ-hưu sẽ tính ra mức chi tiêu ở đầu giai đoạn hai và đầu giai đoạn ba. Chúng ta sẽ dùng hai số đó ở các bước tiếp theo.</p>
   <h4>Tính số tiền cần có ở đầu giai đoạn ba</h4>
   <p>Chép bảng KHTCp2 thành file KHTC3. Nhập vào:</p>
   <ul>
