--- a/kinh-nghiem/linh-tinh/index.html
+++ b/kinh-nghiem/linh-tinh/index.html
@@ -187,7 +187,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h1>Những kinh-nghiệm linh-tinh trong cuộc-sống</h1>
 <dl>
   <dt><a href="can-biet">Những điều NÊN và KHÔNG NÊN làm trong thời Internet</a></dt>
-  <dt><a href='bep'>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</a></dt>
+  <dt><a href='bep'>So sánh chi-phí giữa dùng bếp-ga—bếp-điện-cảm-ứng—lò-microwave</a></dt>
   <dt><a href='ac-dc'>Điện một chiều và điện xoay chiều</a></dt>
   <dt><a href='tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a></dt>
   <dt><a href='dien-standby'>Điện standby tốn bao nhiêu?</a></dt>
